--- a/tablut.css
+++ b/tablut.css
@@ -43,18 +43,19 @@
 
 #board {
     position: relative;
-    height: auto;
+    margin: 0 auto;
+    height: 540px;
+    width: 540px;
     overflow: hidden;
     background-image: url('img/board.jpg');
 }
 .square {
     position: absolute;
-    width: 4rem;
-    height: 4rem;
+    width: 60px;
+    height: 60px;
     border: 1px solid black;
-    background-color: red;
 }
-.possibleMove {
+.square:hover {
     background-color: white;
     opacity: 0.2;
     filter:alpha(opacity=20); /* For IE8 and earlier */  
