Adding .fortress CSS class on some squares, with stripes

--- a/tablut.css
+++ b/tablut.css
@@ -61,6 +61,15 @@
     filter:alpha(opacity=20); /* For IE8 and earlier */
     cursor: pointer;
 }
+.fortress {
+    background: repeating-linear-gradient(
+      45deg,
+      #606dbc,
+      #606dbc 10px,
+      #465298 10px,
+      #465298 20px
+    );
+}
 .disc {
     width: 60px;
     height: 60px;
