Add specific color for each player and for the king
Add new discplayer color for player 1, player 2 and king
Update the getAllDatas function to return more information (king value)
Update the setupLayout function to mangage all type of displayer
Update the placePawn function to manage color for each player

--- a/tablut.css
+++ b/tablut.css
@@ -72,13 +72,45 @@
     );
 }
 
+.discPlayer1 {
+    width: 60px;
+    height: 60px;
+    position: absolute;
+    background-color: grey;
+    border-radius: 30px;
+}
+
+.discPlayer1King {
+    width: 60px;
+    height: 60px;
+    position: absolute;
+    background-color: black;
+    border-radius: 30px;
+}
+
+/******************************/
+/* debug test */
 .disc {
     width: 60px;
     height: 60px;
     position: absolute;
-    background-color: red;
     border-radius: 30px;
 }
+
+.disc_000000 {
+    background-color: white;
+}
+/******************************/
+
+.discPlayer2 {
+    width: 60px;
+    height: 60px;
+    position: absolute;
+    background-color: white;
+    border-radius: 30px;
+}
+
+
 .selected {
    background-color: darkred;
 }
