--- a/tablut.css
+++ b/tablut.css
@@ -97,7 +97,7 @@
     border-radius: 30px;
 }
 
-.disc_000000 {
+.disccolor_000000 {
     background-color: white;
 }
 /******************************/
