--- a/tablut.css
+++ b/tablut.css
@@ -81,6 +81,7 @@
     position: absolute;
     background-color: grey;
     border-radius: 30px;
+    cursor: pointer;
 }
 
 .discPlayer1King {
@@ -89,6 +90,7 @@
     position: absolute;
     background-color: black;
     border-radius: 30px;
+    cursor: pointer;
 }
 
 /* **************************** */
@@ -111,6 +113,7 @@
     position: absolute;
     background-color: white;
     border-radius: 30px;
+    cursor: pointer;
 }
 
 
