--- a/tablut.css
+++ b/tablut.css
@@ -126,3 +126,9 @@
     cursor: pointer;
     opacity: 0.4;
 }
+
+#maintitlebar_topMsg {
+    display: inline-block;
+    position: relative;
+    width: 100%;
+}
