--- a/tablut.css
+++ b/tablut.css
@@ -73,6 +73,16 @@
             #465298 20px
         );
 }
+.corner.fortress::before {
+    content: '☆';
+    color: white;
+    font-size: 3em;
+    line-height: 54px;
+    /* Horizontal centering: */
+    display: block;
+    width: 100%;
+    text-align: center;
+}
 
 .p1Swede {
     width: 54px;
